--- a/vagrant_getting_started/playbook.yml
+++ b/vagrant_getting_started/playbook.yml
@@ -5,8 +5,15 @@
   connection: local
  
   tasks:
-    - name: get system date
-      debug: "msg=\"{{ ansible_date_time.date }}\""
-    
-    - name: get system os
-      debug: "msg=\"{{ ansible_os_family }}\""
+#    - name: curl command
+#      shell: "curlfile.sh"
+    - name: using touch
+      command: /usr/bin/touch /Users/supriyasubudhi/vagrant_getting_started/hi.txt
+
+    - name: curl command
+      command: /usr/bin/curl google.com
+      register: msg1
+
+    - name: display
+      debug: msg="{{ msg1 }}"
+
