--- a/vagrant_getting_started/playbook.yml
+++ b/vagrant_getting_started/playbook.yml
@@ -5,15 +5,15 @@
   connection: local
  
   tasks:
+#    - name: using touch
+#      command: /usr/bin/touch /Users/supriyasubudhi/withzuzu/vagrant_getting_started/hi.txt
+
 #    - name: curl command
-#      shell: "curlfile.sh"
-    - name: using touch
-      command: /usr/bin/touch /Users/supriyasubudhi/vagrant_getting_started/hi.txt
+#      command: /usr/bin/curl google.com
+#      register: msg1
 
-    - name: curl command
-      command: /usr/bin/curl google.com
-      register: msg1
-
-    - name: display
-      debug: msg="{{ msg1 }}"
+#    - name: display
+#      debug: msg="{{ msg1 }}"
+    - name: using comm curl
+      command: /bin/sh ~/withzuzu/vagrant_getting_started/curlfile.sh
 
