--- a/vagrant_getting_started/Vagrantfile
+++ b/vagrant_getting_started/Vagrantfile
@@ -21,7 +21,8 @@ Vagrant.configure("2") do |config|
 
   #configuring ansible into vagrant
   config.vm.provision "ansible" do |ansible|
-	ansible.playbook = "playbook.yml"
+	ansible.playbook = "curl_play.yml"
+#	ansible.playbook = "playbook.yml"
   end
 
   # Create a forwarded port mapping which allows access to a specific port
