--- a/vagrant_getting_started/curl_play.yml
+++ b/vagrant_getting_started/curl_play.yml
@@ -2,14 +2,8 @@
 
 - hosts: localhost
   remote_user: vagrant
+  connection: local
 
   tasks:
-    - name: using touch
-      command: /usr/bin/touch /Users/supriyasubudhi/vagrant_getting_started/hi.txt
-
-    - name: curl command
-      command: /usr/bin/curl google.com
-      register: msg1
-
-    - name: display
-      debug: msg="{{ msg1 }}"
+    - name: using comm curl
+      command: /bin/sh ~/withzuzu/vagrant_getting_started/curlfile.sh
