--- a/vagrant_getting_started/playbook.yml
+++ b/vagrant_getting_started/playbook.yml
@@ -5,8 +5,8 @@
   connection: local
 
   tasks:
-    - name: using touch
-      command: /usr/bin/touch /Users/supriyasubudhi/withzuzu/vagrant_getting_started/hi.txt
+#    - name: using touch
+#      command: /usr/bin/touch /Users/supriyasubudhi/withzuzu/vagrant_getting_started/hi.txt
 
     - name: curl command
       command: /usr/bin/curl google.com
