curl through command play

--- a/vagrant_getting_started/curl_play.yml
+++ b/vagrant_getting_started/curl_play.yml
@@ -6,4 +6,4 @@
 
   tasks:
     - name: using comm curl
-      command: /bin/sh vagrant_getting_started/curlfile.sh
+      command: /bin/sh ~/vagrant_getting_started/curlfile.sh
